--- a/custom_widgets/baseyr/baseyr.html
+++ b/custom_widgets/baseyr/baseyr.html
@@ -1,5 +1,5 @@
 <script type="text/javascript" src="/javascript/custom/moment.min.js"></script>
-<table data-bind="attr: { style: text_style }">
+<table data-bind="attr: { style: table_style }">
   <tr class="hours" data-bind="foreach: hours">
     <td colspan="2">
       <div>
